cmake_minimum_required(VERSION 3.2)
project(ogldev)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Common/FreetypeGL/font-manager.c
    Common/FreetypeGL/font-manager.h
    Common/FreetypeGL/font_shader.cpp
    Common/FreetypeGL/font_shader.h
    Common/FreetypeGL/freetypeGL.cpp
    Common/FreetypeGL/freetypeGL.h
    Common/FreetypeGL/markup.h
    Common/FreetypeGL/texture-atlas.c
    Common/FreetypeGL/texture-atlas.h
    Common/FreetypeGL/texture-font.c
    Common/FreetypeGL/texture-font.h
    Common/FreetypeGL/texture-glyph.c
    Common/FreetypeGL/texture-glyph.h
    Common/FreetypeGL/vector.c
    Common/FreetypeGL/vector.h
    Common/FreetypeGL/vertex-buffer.c
    Common/FreetypeGL/vertex-buffer.h
    Common/camera.cpp
    Common/cubemap_texture.cpp
    Common/glut_backend.cpp
    Common/io_buffer.cpp
    Common/Makefile
    Common/math_3d.cpp
    Common/ogldev_app.cpp
    Common/ogldev_backend.cpp
    Common/ogldev_basic_lighting.cpp
    Common/ogldev_basic_mesh.cpp
    Common/ogldev_glfw_backend.cpp
    Common/ogldev_skinned_mesh.cpp
    Common/ogldev_texture.cpp
    Common/ogldev_util.cpp
    Common/pipeline.cpp
    Common/random_texture.cpp
    Common/technique.cpp
    Include/assimp/Compiler/poppack1.h
    Include/assimp/Compiler/pushpack1.h
    Include/assimp/ai_assert.h
    Include/assimp/anim.h
    Include/assimp/camera.h
    Include/assimp/cexport.h
    Include/assimp/cfileio.h
    Include/assimp/cimport.h
    Include/assimp/color4.h
    Include/assimp/config.h
    Include/assimp/DefaultLogger.hpp
    Include/assimp/defs.h
    Include/assimp/Exporter.hpp
    Include/assimp/Importer.hpp
    Include/assimp/importerdesc.h
    Include/assimp/IOStream.hpp
    Include/assimp/IOSystem.hpp
    Include/assimp/light.h
    Include/assimp/Logger.hpp
    Include/assimp/LogStream.hpp
    Include/assimp/material.h
    Include/assimp/assimp/matrix3x3.h
    Include/assimp/assimp/matrix4x4.h
    Include/assimp/mesh.h
    Include/assimp/NullLogger.hpp
    Include/assimp/postprocess.h
    Include/assimp/ProgressHandler.hpp
    Include/assimp/quaternion.h
    Include/assimp/scene.h
    Include/assimp/texture.h
    Include/assimp/types.h
    Include/assimp/vector2.h
    Include/assimp/assimp/vector3.h
    Include/assimp/version.h
    Include/GL/freeglut.h
    Include/GL/freeglut_ext.h
    Include/GL/freeglut_std.h
    Include/GL/glew.h
    Include/GL/glxew.h
    Include/GL/wglew.h
    Include/GLFW/glfw3.h
    Include/GLFW/glfw3native.h
    Include/magick/accelerate.h
    Include/magick/animate-private.h
    Include/magick/animate.h
    Include/magick/annotate.h
    Include/magick/api.h
    Include/magick/artifact.h
    Include/magick/attribute.h
    Include/magick/blob-private.h
    Include/magick/blob.h
    Include/magick/cache-private.h
    Include/magick/cache-view.h
    Include/magick/cache.h
    Include/magick/channel.h
    Include/magick/cipher.h
    Include/magick/client.h
    Include/magick/coder.h
    Include/magick/color-private.h
    Include/magick/color.h
    Include/magick/colormap-private.h
    Include/magick/colormap.h
    Include/magick/colorspace-private.h
    Include/magick/colorspace.h
    Include/magick/compare.h
    Include/magick/composite-private.h
    Include/magick/composite.h
    Include/magick/compress.h
    Include/magick/configure.h
    Include/magick/constitute.h
    Include/magick/decorate.h
    Include/magick/delegate-private.h
    Include/magick/delegate.h
    Include/magick/deprecate.h
    Include/magick/display-private.h
    Include/magick/display.h
    Include/magick/distort.h
    Include/magick/draw-private.h
    Include/magick/draw.h
    Include/magick/effect.h
    Include/magick/enhance.h
    Include/magick/exception-private.h
    Include/magick/exception.h
    Include/magick/feature.h
    Include/magick/fourier.h
    Include/magick/fx-private.h
    Include/magick/fx.h
    Include/magick/gem.h
    Include/magick/geometry.h
    Include/magick/hashmap.h
    Include/magick/histogram.h
    Include/magick/identify.h
    Include/magick/image-private.h
    Include/magick/image-view.h
    Include/magick/image.h
    Include/magick/ImageMagick.h
    Include/magick/layer.h
    Include/magick/list.h
    Include/magick/locale_.h
    Include/magick/log.h
    Include/magick/mac.h
    Include/magick/magic.h
    Include/magick/magick-config.h
    Include/magick/magick-type.h
    Include/magick/magick.h
    Include/magick/MagickCore.h
    Include/magick/matrix.h
    Include/magick/memory-private.h
    Include/magick/memory_.h
    Include/magick/method-attribute.h
    Include/magick/methods.h
    Include/magick/mime-private.h
    Include/magick/mime.h
    Include/magick/module.h
    Include/magick/monitor-private.h
    Include/magick/monitor.h
    Include/magick/montage.h
    Include/magick/morphology-private.h
    Include/magick/morphology.h
    Include/magick/nt-base.h
    Include/magick/nt-feature.h
    Include/magick/option.h
    Include/magick/paint.h
    Include/magick/pixel-accessor.h
    Include/magick/pixel-private.h
    Include/magick/pixel.h
    Include/magick/policy.h
    Include/magick/prepress.h
    Include/magick/PreRvIcccm.h
    Include/magick/profile.h
    Include/magick/property.h
    Include/magick/quantize.h
    Include/magick/quantum-private.h
    Include/magick/quantum.h
    Include/magick/random-private.h
    Include/magick/random_.h
    Include/magick/registry.h
    Include/magick/resample-private.h
    Include/magick/resample.h
    Include/magick/resize-private.h
    Include/magick/resize.h
    Include/magick/resource_.h
    Include/magick/segment.h
    Include/magick/semaphore-private.h
    Include/magick/semaphore.h
    Include/magick/shear.h
    Include/magick/signature-private.h
    Include/magick/signature.h
    Include/magick/splay-tree.h
    Include/magick/static.h
    Include/magick/statistic.h
    Include/magick/stream-private.h
    Include/magick/stream.h
    Include/magick/string-private.h
    Include/magick/string_.h
    Include/magick/studio.h
    Include/magick/thread-private.h
    Include/magick/thread_.h
    Include/magick/threshold.h
    Include/magick/timer.h
    Include/magick/token-private.h
    Include/magick/token.h
    Include/magick/transform.h
    Include/magick/type.h
    Include/magick/utility-private.h
    Include/magick/utility.h
    Include/magick/version.h
    Include/magick/vms.h
    Include/magick/widget.h
    Include/magick/xml-tree.h
    Include/magick/xwindow-private.h
    Include/magick/xwindow.h
    Include/Magick++/Blob.h
    Include/Magick++/BlobRef.h
    Include/Magick++/CoderInfo.h
    Include/Magick++/Color.h
    Include/Magick++/Drawable.h
    Include/Magick++/Exception.h
    Include/Magick++/Functions.h
    Include/Magick++/Geometry.h
    Include/Magick++/Image.h
    Include/Magick++/ImageRef.h
    Include/Magick++/Include.h
    Include/Magick++/Montage.h
    Include/Magick++/Options.h
    Include/Magick++/Pixels.h
    Include/Magick++/STL.h
    Include/Magick++/Thread.h
    Include/Magick++/TypeMetric.h
    Include/wand/animate.h
    Include/wand/compare.h
    Include/wand/composite.h
    Include/wand/conjure.h
    Include/wand/convert.h
    Include/wand/deprecate.h
    Include/wand/display.h
    Include/wand/drawing-wand.h
    Include/wand/identify.h
    Include/wand/import.h
    Include/wand/magick-image.h
    Include/wand/magick-property.h
    Include/wand/magick-wand-private.h
    Include/wand/magick-wand.h
    Include/wand/magick_wand.h
    Include/wand/MagickWand.h
    Include/wand/method-attribute.h
    Include/wand/mogrify-private.h
    Include/wand/mogrify.h
    Include/wand/montage.h
    Include/wand/pixel-iterator.h
    Include/wand/pixel-wand-private.h
    Include/wand/pixel-wand.h
    Include/wand/stream.h
    Include/wand/studio.h
    Include/wand/wand-config.h
    Include/wand/wand-view.h
    Include/wand/wand.h
    Include/Magick++.h
    Include/glfx.h
    Include/ogldev_app.h
    Include/ogldev_backend.h
    Include/ogldev_basic_lighting.h
    Include/ogldev_basic_mesh.h
    Include/ogldev_callbacks.h
    Include/ogldev_camera.h
    Include/ogldev_cubemap_texture.h
    Include/ogldev_engine_common.h
    Include/ogldev_glfw_backend.h
    Include/ogldev_glut_backend.h
    Include/ogldev_io_buffer.h
    Include/ogldev_keys.h
    Include/ogldev_math_3d.h
    Include/ogldev_pipeline.h
    Include/ogldev_random_texture.h
    Include/ogldev_skinned_mesh.h
    Include/ogldev_texture.h
    Include/ogldev_types.h
    Include/ogldev_util.h
    Include/technique.h
    tutorial01/main.cpp
    tutorial01/Makefile
    tutorial02/main.cpp
    tutorial02/Makefile
    tutorial02/math_3d.h
    tutorial03/main.cpp
    tutorial03/Makefile
    tutorial03/math_3d.h
    tutorial04/main.cpp
    tutorial04/Makefile
    tutorial04/math_3d.h
    tutorial05/main.cpp
    tutorial05/Makefile
    tutorial05/math_3d.h
    tutorial06/main.cpp
    tutorial06/Makefile
    tutorial06/math_3d.h
    tutorial07/main.cpp
    tutorial07/Makefile
    tutorial07/math_3d.h
    tutorial08/main.cpp
    tutorial08/Makefile
    tutorial08/math_3d.h
    tutorial09/main.cpp
    tutorial09/Makefile
    tutorial09/math_3d.h
    tutorial10/main.cpp
    tutorial10/Makefile
    tutorial10/math_3d.h
    tutorial11/main.cpp
    tutorial11/Makefile
    tutorial11/math_3d.h
    tutorial11/pipeline.cpp
    tutorial11/pipeline.h
    tutorial12/main.cpp
    tutorial12/Makefile
    tutorial12/math_3d.h
    tutorial12/pipeline.cpp
    tutorial12/pipeline.h
    tutorial13/main.cpp
    tutorial13/Makefile
    tutorial13/math_3d.cpp
    tutorial13/math_3d.h
    tutorial13/pipeline.cpp
    tutorial13/pipeline.h
    tutorial14/camera.cpp
    tutorial14/camera.h
    tutorial14/main.cpp
    tutorial14/Makefile
    tutorial14/math_3d.cpp
    tutorial14/math_3d.h
    tutorial14/pipeline.cpp
    tutorial14/pipeline.h
    tutorial15/camera.cpp
    tutorial15/camera.h
    tutorial15/main.cpp
    tutorial15/Makefile
    tutorial15/math_3d.cpp
    tutorial15/math_3d.h
    tutorial15/pipeline.cpp
    tutorial15/pipeline.h
    tutorial16/camera.cpp
    tutorial16/camera.h
    tutorial16/main.cpp
    tutorial16/math_3d.cpp
    tutorial16/math_3d.h
    tutorial16/pipeline.cpp
    tutorial16/pipeline.h
    tutorial16/texture.cpp
    tutorial16/texture.h
    tutorial17/callbacks.h
    tutorial17/camera.cpp
    tutorial17/camera.h
    tutorial17/glut_backend.cpp
    tutorial17/glut_backend.h
    tutorial17/lighting_technique.cpp
    tutorial17/lighting_technique.h
    tutorial17/main.cpp
    tutorial17/math_3d.cpp
    tutorial17/math_3d.h
    tutorial17/pipeline.cpp
    tutorial17/pipeline.h
    tutorial17/technique.cpp
    tutorial17/technique.h
    tutorial17/texture.cpp
    tutorial17/texture.h
    tutorial18/callbacks.h
    tutorial18/camera.cpp
    tutorial18/camera.h
    tutorial18/glut_backend.cpp
    tutorial18/glut_backend.h
    tutorial18/lighting_technique.cpp
    tutorial18/lighting_technique.h
    tutorial18/main.cpp
    tutorial18/math_3d.cpp
    tutorial18/math_3d.h
    tutorial18/pipeline.cpp
    tutorial18/pipeline.h
    tutorial18/technique.cpp
    tutorial18/technique.h
    tutorial18/texture.cpp
    tutorial18/texture.h
    tutorial18/util.h
    tutorial19/callbacks.h
    tutorial19/camera.cpp
    tutorial19/camera.h
    tutorial19/glut_backend.cpp
    tutorial19/glut_backend.h
    tutorial19/lighting_technique.cpp
    tutorial19/lighting_technique.h
    tutorial19/main.cpp
    tutorial19/math_3d.cpp
    tutorial19/math_3d.h
    tutorial19/pipeline.cpp
    tutorial19/pipeline.h
    tutorial19/technique.cpp
    tutorial19/technique.h
    tutorial19/texture.cpp
    tutorial19/texture.h
    tutorial19/util.h
    tutorial20/callbacks.h
    tutorial20/camera.cpp
    tutorial20/camera.h
    tutorial20/glut_backend.cpp
    tutorial20/glut_backend.h
    tutorial20/lighting_technique.cpp
    tutorial20/lighting_technique.h
    tutorial20/main.cpp
    tutorial20/math_3d.cpp
    tutorial20/math_3d.h
    tutorial20/pipeline.cpp
    tutorial20/pipeline.h
    tutorial20/technique.cpp
    tutorial20/technique.h
    tutorial20/texture.cpp
    tutorial20/texture.h
    tutorial20/util.h
    tutorial21/callbacks.h
    tutorial21/camera.cpp
    tutorial21/camera.h
    tutorial21/glut_backend.cpp
    tutorial21/glut_backend.h
    tutorial21/lighting_technique.cpp
    tutorial21/lighting_technique.h
    tutorial21/main.cpp
    tutorial21/math_3d.cpp
    tutorial21/math_3d.h
    tutorial21/pipeline.cpp
    tutorial21/pipeline.h
    tutorial21/technique.cpp
    tutorial21/technique.h
    tutorial21/texture.cpp
    tutorial21/texture.h
    tutorial21/util.h
    tutorial22/callbacks.h
    tutorial22/camera.cpp
    tutorial22/camera.h
    tutorial22/glut_backend.cpp
    tutorial22/glut_backend.h
    tutorial22/lighting_technique.cpp
    tutorial22/lighting_technique.h
    tutorial22/main.cpp
    tutorial22/math_3d.cpp
    tutorial22/math_3d.h
    tutorial22/mesh.cpp
    tutorial22/mesh.h
    tutorial22/pipeline.cpp
    tutorial22/pipeline.h
    tutorial22/technique.cpp
    tutorial22/technique.h
    tutorial22/texture.cpp
    tutorial22/texture.h
    tutorial22/util.h
    tutorial23/callbacks.h
    tutorial23/camera.cpp
    tutorial23/camera.h
    tutorial23/glut_backend.cpp
    tutorial23/glut_backend.h
    tutorial23/lighting_technique.cpp
    tutorial23/lighting_technique.h
    tutorial23/main.cpp
    tutorial23/math_3d.cpp
    tutorial23/math_3d.h
    tutorial23/mesh.cpp
    tutorial23/mesh.h
    tutorial23/pipeline.cpp
    tutorial23/pipeline.h
    tutorial23/shadow_map_fbo.cpp
    tutorial23/shadow_map_fbo.h
    tutorial23/shadow_map_technique.cpp
    tutorial23/shadow_map_technique.h
    tutorial23/technique.cpp
    tutorial23/technique.h
    tutorial23/texture.cpp
    tutorial23/texture.h
    tutorial23/util.h
    tutorial24/callbacks.h
    tutorial24/camera.cpp
    tutorial24/camera.h
    tutorial24/glut_backend.cpp
    tutorial24/glut_backend.h
    tutorial24/lighting_technique.cpp
    tutorial24/lighting_technique.h
    tutorial24/main.cpp
    tutorial24/math_3d.cpp
    tutorial24/math_3d.h
    tutorial24/mesh.cpp
    tutorial24/mesh.h
    tutorial24/pipeline.cpp
    tutorial24/pipeline.h
    tutorial24/shadow_map_fbo.cpp
    tutorial24/shadow_map_fbo.h
    tutorial24/shadow_map_technique.cpp
    tutorial24/shadow_map_technique.h
    tutorial24/technique.cpp
    tutorial24/technique.h
    tutorial24/texture.cpp
    tutorial24/texture.h
    tutorial24/util.h
    tutorial25/callbacks.h
    tutorial25/camera.cpp
    tutorial25/camera.h
    tutorial25/cubemap_texture.cpp
    tutorial25/cubemap_texture.h
    tutorial25/glut_backend.cpp
    tutorial25/glut_backend.h
    tutorial25/lighting_technique.cpp
    tutorial25/lighting_technique.h
    tutorial25/main.cpp
    tutorial25/math_3d.cpp
    tutorial25/math_3d.h
    tutorial25/mesh.cpp
    tutorial25/mesh.h
    tutorial25/pipeline.cpp
    tutorial25/pipeline.h
    tutorial25/skybox.cpp
    tutorial25/skybox.h
    tutorial25/skybox_technique.cpp
    tutorial25/skybox_technique.h
    tutorial25/technique.cpp
    tutorial25/technique.h
    tutorial25/texture.cpp
    tutorial25/texture.h
    tutorial25/util.h
    tutorial26/callbacks.h
    tutorial26/camera.cpp
    tutorial26/camera.h
    tutorial26/engine_common.h
    tutorial26/glut_backend.cpp
    tutorial26/glut_backend.h
    tutorial26/lighting_technique.cpp
    tutorial26/lighting_technique.h
    tutorial26/main.cpp
    tutorial26/math_3d.cpp
    tutorial26/math_3d.h
    tutorial26/mesh.cpp
    tutorial26/mesh.h
    tutorial26/pipeline.cpp
    tutorial26/pipeline.h
    tutorial26/technique.cpp
    tutorial26/technique.h
    tutorial26/texture.cpp
    tutorial26/texture.h
    tutorial26/util.h
    tutorial27/billboard_list.cpp
    tutorial27/billboard_list.h
    tutorial27/billboard_technique.cpp
    tutorial27/billboard_technique.h
    tutorial27/callbacks.h
    tutorial27/camera.cpp
    tutorial27/camera.h
    tutorial27/engine_common.h
    tutorial27/glut_backend.cpp
    tutorial27/glut_backend.h
    tutorial27/lighting_technique.cpp
    tutorial27/lighting_technique.h
    tutorial27/main.cpp
    tutorial27/math_3d.cpp
    tutorial27/math_3d.h
    tutorial27/mesh.cpp
    tutorial27/mesh.h
    tutorial27/pipeline.cpp
    tutorial27/pipeline.h
    tutorial27/technique.cpp
    tutorial27/technique.h
    tutorial27/texture.cpp
    tutorial27/texture.h
    tutorial27/util.h
    tutorial28/billboard_technique.cpp
    tutorial28/billboard_technique.h
    tutorial28/callbacks.h
    tutorial28/camera.cpp
    tutorial28/camera.h
    tutorial28/engine_common.h
    tutorial28/glut_backend.cpp
    tutorial28/glut_backend.h
    tutorial28/lighting_technique.cpp
    tutorial28/lighting_technique.h
    tutorial28/main.cpp
    tutorial28/math_3d.cpp
    tutorial28/math_3d.h
    tutorial28/mesh.cpp
    tutorial28/mesh.h
    tutorial28/particle_system.cpp
    tutorial28/particle_system.h
    tutorial28/pipeline.cpp
    tutorial28/pipeline.h
    tutorial28/ps_update_technique.cpp
    tutorial28/ps_update_technique.h
    tutorial28/random_texture.cpp
    tutorial28/random_texture.h
    tutorial28/technique.cpp
    tutorial28/technique.h
    tutorial28/texture.cpp
    tutorial28/texture.h
    tutorial28/util.h
    tutorial29/callbacks.h
    tutorial29/camera.cpp
    tutorial29/camera.h
    tutorial29/engine_common.h
    tutorial29/glut_backend.cpp
    tutorial29/glut_backend.h
    tutorial29/lighting_technique.cpp
    tutorial29/lighting_technique.h
    tutorial29/main.cpp
    tutorial29/math_3d.cpp
    tutorial29/math_3d.h
    tutorial29/mesh.cpp
    tutorial29/mesh.h
    tutorial29/picking_technique.cpp
    tutorial29/picking_technique.h
    tutorial29/picking_texture.cpp
    tutorial29/picking_texture.h
    tutorial29/pipeline.cpp
    tutorial29/pipeline.h
    tutorial29/render_callbacks.h
    tutorial29/simple_color_technique.cpp
    tutorial29/simple_color_technique.h
    tutorial29/technique.cpp
    tutorial29/technique.h
    tutorial29/texture.cpp
    tutorial29/texture.h
    tutorial29/util.h
    tutorial30/callbacks.h
    tutorial30/camera.cpp
    tutorial30/camera.h
    tutorial30/engine_common.h
    tutorial30/glut_backend.cpp
    tutorial30/glut_backend.h
    tutorial30/lighting_technique.cpp
    tutorial30/lighting_technique.h
    tutorial30/main.cpp
    tutorial30/math_3d.cpp
    tutorial30/math_3d.h
    tutorial30/mesh.cpp
    tutorial30/mesh.h
    tutorial30/pipeline.cpp
    tutorial30/pipeline.h
    tutorial30/render_callbacks.h
    tutorial30/technique.cpp
    tutorial30/technique.h
    tutorial30/texture.cpp
    tutorial30/texture.h
    tutorial30/util.h
    tutorial31/callbacks.h
    tutorial31/camera.cpp
    tutorial31/camera.h
    tutorial31/engine_common.h
    tutorial31/glut_backend.cpp
    tutorial31/glut_backend.h
    tutorial31/lighting_technique.cpp
    tutorial31/lighting_technique.h
    tutorial31/main.cpp
    tutorial31/math_3d.cpp
    tutorial31/math_3d.h
    tutorial31/mesh.cpp
    tutorial31/mesh.h
    tutorial31/pipeline.cpp
    tutorial31/pipeline.h
    tutorial31/render_callbacks.h
    tutorial31/technique.cpp
    tutorial31/technique.h
    tutorial31/texture.cpp
    tutorial31/texture.h
    tutorial31/util.h
    tutorial32/callbacks.h
    tutorial32/camera.cpp
    tutorial32/camera.h
    tutorial32/engine_common.h
    tutorial32/glut_backend.cpp
    tutorial32/glut_backend.h
    tutorial32/lighting_technique.cpp
    tutorial32/lighting_technique.h
    tutorial32/main.cpp
    tutorial32/math_3d.cpp
    tutorial32/math_3d.h
    tutorial32/mesh.cpp
    tutorial32/mesh.h
    tutorial32/pipeline.cpp
    tutorial32/pipeline.h
    tutorial32/technique.cpp
    tutorial32/technique.h
    tutorial32/texture.cpp
    tutorial32/texture.h
    tutorial32/util.h
    tutorial33/FreetypeGL/font-manager.c
    tutorial33/FreetypeGL/font-manager.h
    tutorial33/FreetypeGL/font_shader.cpp
    tutorial33/FreetypeGL/font_shader.h
    tutorial33/FreetypeGL/freetypeGL.cpp
    tutorial33/FreetypeGL/freetypeGL.h
    tutorial33/FreetypeGL/markup.h
    tutorial33/FreetypeGL/texture-atlas.c
    tutorial33/FreetypeGL/texture-atlas.h
    tutorial33/FreetypeGL/texture-font.c
    tutorial33/FreetypeGL/texture-font.h
    tutorial33/FreetypeGL/texture-glyph.c
    tutorial33/FreetypeGL/texture-glyph.h
    tutorial33/FreetypeGL/vector.c
    tutorial33/FreetypeGL/vector.h
    tutorial33/FreetypeGL/vertex-buffer.c
    tutorial33/FreetypeGL/vertex-buffer.h
    tutorial33/callbacks.h
    tutorial33/camera.cpp
    tutorial33/camera.h
    tutorial33/engine_common.h
    tutorial33/glut_backend.cpp
    tutorial33/glut_backend.h
    tutorial33/lighting_technique.cpp
    tutorial33/lighting_technique.h
    tutorial33/main.cpp
    tutorial33/math_3d.cpp
    tutorial33/math_3d.h
    tutorial33/mesh.cpp
    tutorial33/mesh.h
    tutorial33/pipeline.cpp
    tutorial33/pipeline.h
    tutorial33/technique.cpp
    tutorial33/technique.h
    tutorial33/texture.cpp
    tutorial33/texture.h
    tutorial33/util.h
    tutorial34/FreetypeGL/font-manager.c
    tutorial34/FreetypeGL/font-manager.h
    tutorial34/FreetypeGL/font_shader.cpp
    tutorial34/FreetypeGL/font_shader.h
    tutorial34/FreetypeGL/freetypeGL.cpp
    tutorial34/FreetypeGL/freetypeGL.h
    tutorial34/FreetypeGL/markup.h
    tutorial34/FreetypeGL/texture-atlas.c
    tutorial34/FreetypeGL/texture-atlas.h
    tutorial34/FreetypeGL/texture-font.c
    tutorial34/FreetypeGL/texture-font.h
    tutorial34/FreetypeGL/texture-glyph.c
    tutorial34/FreetypeGL/texture-glyph.h
    tutorial34/FreetypeGL/vector.c
    tutorial34/FreetypeGL/vector.h
    tutorial34/FreetypeGL/vertex-buffer.c
    tutorial34/FreetypeGL/vertex-buffer.h
    tutorial34/callbacks.h
    tutorial34/camera.cpp
    tutorial34/camera.h
    tutorial34/engine_common.h
    tutorial34/glut_backend.cpp
    tutorial34/glut_backend.h
    tutorial34/lighting_technique.cpp
    tutorial34/lighting_technique.h
    tutorial34/main.cpp
    tutorial34/math_3d.cpp
    tutorial34/math_3d.h
    tutorial34/mesh.cpp
    tutorial34/mesh.h
    tutorial34/pipeline.cpp
    tutorial34/pipeline.h
    tutorial34/technique.cpp
    tutorial34/technique.h
    tutorial34/texture.cpp
    tutorial34/texture.h
    tutorial34/util.h
    tutorial35/FreetypeGL/font-manager.c
    tutorial35/FreetypeGL/font-manager.h
    tutorial35/FreetypeGL/font_shader.cpp
    tutorial35/FreetypeGL/font_shader.h
    tutorial35/FreetypeGL/freetypeGL.cpp
    tutorial35/FreetypeGL/freetypeGL.h
    tutorial35/FreetypeGL/markup.h
    tutorial35/FreetypeGL/texture-atlas.c
    tutorial35/FreetypeGL/texture-atlas.h
    tutorial35/FreetypeGL/texture-font.c
    tutorial35/FreetypeGL/texture-font.h
    tutorial35/FreetypeGL/texture-glyph.c
    tutorial35/FreetypeGL/texture-glyph.h
    tutorial35/FreetypeGL/vector.c
    tutorial35/FreetypeGL/vector.h
    tutorial35/FreetypeGL/vertex-buffer.c
    tutorial35/FreetypeGL/vertex-buffer.h
    tutorial35/callbacks.h
    tutorial35/camera.cpp
    tutorial35/camera.h
    tutorial35/ds_geom_pass_tech.cpp
    tutorial35/ds_geom_pass_tech.h
    tutorial35/engine_common.h
    tutorial35/gbuffer.cpp
    tutorial35/gbuffer.h
    tutorial35/glut_backend.cpp
    tutorial35/glut_backend.h
    tutorial35/main.cpp
    tutorial35/math_3d.cpp
    tutorial35/math_3d.h
    tutorial35/mesh.cpp
    tutorial35/mesh.h
    tutorial35/pipeline.cpp
    tutorial35/pipeline.h
    tutorial35/technique.cpp
    tutorial35/technique.h
    tutorial35/texture.cpp
    tutorial35/texture.h
    tutorial35/util.h
    tutorial36/FreetypeGL/font-manager.c
    tutorial36/FreetypeGL/font-manager.h
    tutorial36/FreetypeGL/font_shader.cpp
    tutorial36/FreetypeGL/font_shader.h
    tutorial36/FreetypeGL/freetypeGL.cpp
    tutorial36/FreetypeGL/freetypeGL.h
    tutorial36/FreetypeGL/markup.h
    tutorial36/FreetypeGL/texture-atlas.c
    tutorial36/FreetypeGL/texture-atlas.h
    tutorial36/FreetypeGL/texture-font.c
    tutorial36/FreetypeGL/texture-font.h
    tutorial36/FreetypeGL/texture-glyph.c
    tutorial36/FreetypeGL/texture-glyph.h
    tutorial36/FreetypeGL/vector.c
    tutorial36/FreetypeGL/vector.h
    tutorial36/FreetypeGL/vertex-buffer.c
    tutorial36/FreetypeGL/vertex-buffer.h
    tutorial36/callbacks.h
    tutorial36/camera.cpp
    tutorial36/camera.h
    tutorial36/ds_dir_light_pass_tech.cpp
    tutorial36/ds_dir_light_pass_tech.h
    tutorial36/ds_geom_pass_tech.cpp
    tutorial36/ds_geom_pass_tech.h
    tutorial36/ds_light_pass_tech.cpp
    tutorial36/ds_light_pass_tech.h
    tutorial36/ds_point_light_pass_tech.cpp
    tutorial36/ds_point_light_pass_tech.h
    tutorial36/engine_common.h
    tutorial36/gbuffer.cpp
    tutorial36/gbuffer.h
    tutorial36/glut_backend.cpp
    tutorial36/glut_backend.h
    tutorial36/lights_common.h
    tutorial36/main.cpp
    tutorial36/math_3d.cpp
    tutorial36/math_3d.h
    tutorial36/mesh.cpp
    tutorial36/mesh.h
    tutorial36/pipeline.cpp
    tutorial36/pipeline.h
    tutorial36/technique.cpp
    tutorial36/technique.h
    tutorial36/texture.cpp
    tutorial36/texture.h
    tutorial36/util.h
    tutorial37/FreetypeGL/font-manager.c
    tutorial37/FreetypeGL/font-manager.h
    tutorial37/FreetypeGL/font_shader.cpp
    tutorial37/FreetypeGL/font_shader.h
    tutorial37/FreetypeGL/freetypeGL.cpp
    tutorial37/FreetypeGL/freetypeGL.h
    tutorial37/FreetypeGL/markup.h
    tutorial37/FreetypeGL/texture-atlas.c
    tutorial37/FreetypeGL/texture-atlas.h
    tutorial37/FreetypeGL/texture-font.c
    tutorial37/FreetypeGL/texture-font.h
    tutorial37/FreetypeGL/texture-glyph.c
    tutorial37/FreetypeGL/texture-glyph.h
    tutorial37/FreetypeGL/vector.c
    tutorial37/FreetypeGL/vector.h
    tutorial37/FreetypeGL/vertex-buffer.c
    tutorial37/FreetypeGL/vertex-buffer.h
    tutorial37/callbacks.h
    tutorial37/camera.cpp
    tutorial37/camera.h
    tutorial37/ds_dir_light_pass_tech.cpp
    tutorial37/ds_dir_light_pass_tech.h
    tutorial37/ds_geom_pass_tech.cpp
    tutorial37/ds_geom_pass_tech.h
    tutorial37/ds_light_pass_tech.cpp
    tutorial37/ds_light_pass_tech.h
    tutorial37/ds_point_light_pass_tech.cpp
    tutorial37/ds_point_light_pass_tech.h
    tutorial37/engine_common.h
    tutorial37/gbuffer.cpp
    tutorial37/gbuffer.h
    tutorial37/glut_backend.cpp
    tutorial37/glut_backend.h
    tutorial37/lights_common.h
    tutorial37/main.cpp
    tutorial37/math_3d.cpp
    tutorial37/math_3d.h
    tutorial37/mesh.cpp
    tutorial37/mesh.h
    tutorial37/null_technique.cpp
    tutorial37/null_technique.h
    tutorial37/pipeline.cpp
    tutorial37/pipeline.h
    tutorial37/technique.cpp
    tutorial37/technique.h
    tutorial37/texture.cpp
    tutorial37/texture.h
    tutorial37/util.h
    tutorial38/FreetypeGL/font-manager.c
    tutorial38/FreetypeGL/font-manager.h
    tutorial38/FreetypeGL/font_shader.cpp
    tutorial38/FreetypeGL/font_shader.h
    tutorial38/FreetypeGL/freetypeGL.cpp
    tutorial38/FreetypeGL/freetypeGL.h
    tutorial38/FreetypeGL/markup.h
    tutorial38/FreetypeGL/texture-atlas.c
    tutorial38/FreetypeGL/texture-atlas.h
    tutorial38/FreetypeGL/texture-font.c
    tutorial38/FreetypeGL/texture-font.h
    tutorial38/FreetypeGL/texture-glyph.c
    tutorial38/FreetypeGL/texture-glyph.h
    tutorial38/FreetypeGL/vector.c
    tutorial38/FreetypeGL/vector.h
    tutorial38/FreetypeGL/vertex-buffer.c
    tutorial38/FreetypeGL/vertex-buffer.h
    tutorial38/callbacks.h
    tutorial38/camera.cpp
    tutorial38/camera.h
    tutorial38/engine_common.h
    tutorial38/glut_backend.cpp
    tutorial38/glut_backend.h
    tutorial38/main.cpp
    tutorial38/math_3d.cpp
    tutorial38/math_3d.h
    tutorial38/mesh.cpp
    tutorial38/mesh.h
    tutorial38/ogldev_types.h
    tutorial38/pipeline.cpp
    tutorial38/pipeline.h
    tutorial38/skinning_technique.cpp
    tutorial38/skinning_technique.h
    tutorial38/technique.cpp
    tutorial38/technique.h
    tutorial38/texture.cpp
    tutorial38/texture.h
    tutorial38/util.h
    tutorial39/FreetypeGL/font-manager.c
    tutorial39/FreetypeGL/font-manager.h
    tutorial39/FreetypeGL/font_shader.cpp
    tutorial39/FreetypeGL/font_shader.h
    tutorial39/FreetypeGL/freetypeGL.cpp
    tutorial39/FreetypeGL/freetypeGL.h
    tutorial39/FreetypeGL/markup.h
    tutorial39/FreetypeGL/texture-atlas.c
    tutorial39/FreetypeGL/texture-atlas.h
    tutorial39/FreetypeGL/texture-font.c
    tutorial39/FreetypeGL/texture-font.h
    tutorial39/FreetypeGL/texture-glyph.c
    tutorial39/FreetypeGL/texture-glyph.h
    tutorial39/FreetypeGL/vector.c
    tutorial39/FreetypeGL/vector.h
    tutorial39/FreetypeGL/vertex-buffer.c
    tutorial39/FreetypeGL/vertex-buffer.h
    tutorial39/callbacks.h
    tutorial39/camera.cpp
    tutorial39/camera.h
    tutorial39/engine_common.h
    tutorial39/glut_backend.cpp
    tutorial39/glut_backend.h
    tutorial39/lighting_technique.cpp
    tutorial39/lighting_technique.h
    tutorial39/main.cpp
    tutorial39/math_3d.cpp
    tutorial39/math_3d.h
    tutorial39/mesh.cpp
    tutorial39/mesh.h
    tutorial39/ogldev_types.h
    tutorial39/pipeline.cpp
    tutorial39/pipeline.h
    tutorial39/silhouette_technique.cpp
    tutorial39/silhouette_technique.h
    tutorial39/technique.cpp
    tutorial39/technique.h
    tutorial39/texture.cpp
    tutorial39/texture.h
    tutorial39/util.h
    tutorial40/FreetypeGL/font-manager.c
    tutorial40/FreetypeGL/font-manager.h
    tutorial40/FreetypeGL/font_shader.cpp
    tutorial40/FreetypeGL/font_shader.h
    tutorial40/FreetypeGL/freetypeGL.cpp
    tutorial40/FreetypeGL/freetypeGL.h
    tutorial40/FreetypeGL/markup.h
    tutorial40/FreetypeGL/texture-atlas.c
    tutorial40/FreetypeGL/texture-atlas.h
    tutorial40/FreetypeGL/texture-font.c
    tutorial40/FreetypeGL/texture-font.h
    tutorial40/FreetypeGL/texture-glyph.c
    tutorial40/FreetypeGL/texture-glyph.h
    tutorial40/FreetypeGL/vector.c
    tutorial40/FreetypeGL/vector.h
    tutorial40/FreetypeGL/vertex-buffer.c
    tutorial40/FreetypeGL/vertex-buffer.h
    tutorial40/callbacks.h
    tutorial40/camera.cpp
    tutorial40/camera.h
    tutorial40/engine_common.h
    tutorial40/glut_backend.cpp
    tutorial40/glut_backend.h
    tutorial40/lighting_technique.cpp
    tutorial40/lighting_technique.h
    tutorial40/main.cpp
    tutorial40/math_3d.cpp
    tutorial40/math_3d.h
    tutorial40/mesh.cpp
    tutorial40/mesh.h
    tutorial40/null_technique.cpp
    tutorial40/null_technique.h
    tutorial40/ogldev_types.h
    tutorial40/pipeline.cpp
    tutorial40/pipeline.h
    tutorial40/shadow_volume_technique.cpp
    tutorial40/shadow_volume_technique.h
    tutorial40/technique.cpp
    tutorial40/technique.h
    tutorial40/texture.cpp
    tutorial40/texture.h
    tutorial40/util.h
    tutorial41/FreetypeGL/font-manager.c
    tutorial41/FreetypeGL/font-manager.h
    tutorial41/FreetypeGL/font_shader.cpp
    tutorial41/FreetypeGL/font_shader.h
    tutorial41/FreetypeGL/freetypeGL.cpp
    tutorial41/FreetypeGL/freetypeGL.h
    tutorial41/FreetypeGL/markup.h
    tutorial41/FreetypeGL/texture-atlas.c
    tutorial41/FreetypeGL/texture-atlas.h
    tutorial41/FreetypeGL/texture-font.c
    tutorial41/FreetypeGL/texture-font.h
    tutorial41/FreetypeGL/texture-glyph.c
    tutorial41/FreetypeGL/texture-glyph.h
    tutorial41/FreetypeGL/vector.c
    tutorial41/FreetypeGL/vector.h
    tutorial41/FreetypeGL/vertex-buffer.c
    tutorial41/FreetypeGL/vertex-buffer.h
    tutorial41/callbacks.h
    tutorial41/camera.cpp
    tutorial41/camera.h
    tutorial41/engine_common.h
    tutorial41/glut_backend.cpp
    tutorial41/glut_backend.h
    tutorial41/lighting_technique.cpp
    tutorial41/lighting_technique.h
    tutorial41/main.cpp
    tutorial41/math_3d.cpp
    tutorial41/math_3d.h
    tutorial41/mesh.cpp
    tutorial41/mesh.h
    tutorial41/null_technique.cpp
    tutorial41/null_technique.h
    tutorial41/ogldev_types.h
    tutorial41/pipeline.cpp
    tutorial41/pipeline.h
    tutorial41/shadow_volume_technique.cpp
    tutorial41/shadow_volume_technique.h
    tutorial41/technique.cpp
    tutorial41/technique.h
    tutorial41/texture.cpp
    tutorial41/texture.h
    tutorial41/util.h
    tutorial42/FreetypeGL/font-manager.c
    tutorial42/FreetypeGL/font-manager.h
    tutorial42/FreetypeGL/font_shader.cpp
    tutorial42/FreetypeGL/font_shader.h
    tutorial42/FreetypeGL/freetypeGL.cpp
    tutorial42/FreetypeGL/freetypeGL.h
    tutorial42/FreetypeGL/markup.h
    tutorial42/FreetypeGL/texture-atlas.c
    tutorial42/FreetypeGL/texture-atlas.h
    tutorial42/FreetypeGL/texture-font.c
    tutorial42/FreetypeGL/texture-font.h
    tutorial42/FreetypeGL/texture-glyph.c
    tutorial42/FreetypeGL/texture-glyph.h
    tutorial42/FreetypeGL/vector.c
    tutorial42/FreetypeGL/vector.h
    tutorial42/FreetypeGL/vertex-buffer.c
    tutorial42/FreetypeGL/vertex-buffer.h
    tutorial42/callbacks.h
    tutorial42/camera.cpp
    tutorial42/camera.h
    tutorial42/engine_common.h
    tutorial42/glut_backend.cpp
    tutorial42/glut_backend.h
    tutorial42/lighting_technique.cpp
    tutorial42/lighting_technique.h
    tutorial42/main.cpp
    tutorial42/math_3d.cpp
    tutorial42/math_3d.h
    tutorial42/mesh.cpp
    tutorial42/mesh.h
    tutorial42/ogldev_types.h
    tutorial42/pipeline.cpp
    tutorial42/pipeline.h
    tutorial42/shadow_map_fbo.cpp
    tutorial42/shadow_map_fbo.h
    tutorial42/shadow_map_technique.cpp
    tutorial42/shadow_map_technique.h
    tutorial42/technique.cpp
    tutorial42/technique.h
    tutorial42/texture.cpp
    tutorial42/texture.h
    tutorial42/util.h
    tutorial43/callbacks.h
    tutorial43/camera.cpp
    tutorial43/camera.h
    tutorial43/engine_common.h
    tutorial43/glut_backend.cpp
    tutorial43/glut_backend.h
    tutorial43/lighting_technique.cpp
    tutorial43/lighting_technique.h
    tutorial43/main.cpp
    tutorial43/math_3d.cpp
    tutorial43/math_3d.h
    tutorial43/mesh.cpp
    tutorial43/mesh.h
    tutorial43/pipeline.cpp
    tutorial43/pipeline.h
    tutorial43/shadow_map_fbo.cpp
    tutorial43/shadow_map_fbo.h
    tutorial43/shadow_map_technique.cpp
    tutorial43/shadow_map_technique.h
    tutorial44/engine_common.h
    tutorial44/lighting_technique.cpp
    tutorial44/lighting_technique.h
    tutorial44/mesh.cpp
    tutorial44/mesh.h
    tutorial44/tutorial44.cpp
    tutorial45/blur_tech.cpp
    tutorial45/blur_tech.h
    tutorial45/engine_common.h
    tutorial45/geom_pass_tech.cpp
    tutorial45/geom_pass_tech.h
    tutorial45/lighting_technique.cpp
    tutorial45/lighting_technique.h
    tutorial45/mesh.cpp
    tutorial45/mesh.h
    tutorial45/ssao_technique.cpp
    tutorial45/ssao_technique.h
    tutorial45/tutorial45.cpp)

add_executable(ogldev ${SOURCE_FILES})